GARCIA_Ex02_CSS.css
.greetings {
  display: flex;
  height: 100vh;
  width: 100vw;
  justify-content: space-around;
  align-items: center;
  color: white;
  background-color: rgb(21, 21, 21);
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

#hello {
  display: flex;
  font-size: 50px;
  text-shadow: 0px 0px 100px green, 0px 0px 200px green, 0px 0px 300px green;
}

#name {
  display: flex;
  font-size: 30px;
  flex-direction: column;
  text-shadow: 0px 0px 150px white;
  font-weight: bolder;
}

.navigation_bar{
  background-color: #434343;
  padding: 50px;
  font-size: 30px;
  font-variant: small-caps;
  width: 350px;
  height: 350px;
}

.text {
  color: white;
  text-decoration: none;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 25px;
}

.portfolio {
  /* background-color: #1c1c1c; */
  height: auto;
  width: 100vw;
  background-image: linear-gradient(rgb(21, 21, 21), rgb(19, 72, 19),rgb(19, 72, 19), rgb(21, 21, 21), rgb(21, 21, 21));
}

#bar1, #bar2, #bar3, #skills{
  display: flex;
  color: white;
  background-color: #141414;
  width: 50%;
  min-height: 250px; 
  border-radius: 50px;
  margin: 0 auto;
  text-shadow: #434343;
  align-items: center;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  gap: 50px;
  justify-content: center
}

.project_text {
  max-width: 50%;
  text-align: left;
  font-size: 16px;
  line-height: 1.5;
}

#footer {
  width: 100vw;
  background-color: #141414;
  
}

#info {
  display: flex;
  color: white;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  flex-direction: row;
  padding: 40px;
  justify-content: space-evenly;
}

#footer_logo {
  width: 200px;
  display: flex;
  flex-direction: row;
  gap: 40px;
}

#socmed_links {
  display: flex;
  width: auto;
  gap: 10px;
  justify-content: center;
  flex-direction: column;
}

.title_text {
  color: white;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 25px;
  display: flex;
  justify-content: center;
}

#autobiography {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  gap: 40px;
  width: 100%;
}

#id_img {
  width: 10px;
}

#autobiography_text {
  text-align: left;
  color: white;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  color: black;
  background-color: white;
  padding: 100px;
  border-radius: 10px;
}

